--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,8 @@
-<!-- text interpolation -->
-<h1>Hello : {{ name }}</h1>
+<!-- property -->
+<img [src]="imageUrl" [width]="size()" [height]="size()" alt="">
+
+<!-- expression -->
+<img [src]="imageUrl" [width]="size()" [height]="size()+50" alt="">
+
+<!-- method -->
+<img [src]="imageUrl" [width]="doubleSize()" [height]="doubleSize()" alt="">
