--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,8 @@
 <div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
-  <h1 class="text-3xl font-bold  text-purple-500">
-    Hello world!
-  </h1>
-  <!-- event binding -->
-  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" (click)="showMessage()">Click
-    Me</button>
 
+
+  <input type="text" [(ngModel)]="username" class="border border-gray-300 p-2 rounded mb-4"
+    placeholder="Enter your name">
+
+  <h1>Welcome : {{ username }}</h1>
 </div>
