--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div [ngClass]="isActive ? 'dark' : 'light'" class="flex flex-col items-center justify-center min-h-screen">
-  <h1 class="text-3xl font-bold">
+  <h1 [ngStyle]="{'background': 'red', 'color':'white'}" class="text-3xl font-bold">
     User Data Management
   </h1>
 
@@ -11,7 +11,7 @@
     <p class="text-gray-600">Salary: {{ user.salary }}</p>
   </div>
   }@empty {
-  <p class="text-gray-600">No data available.</p>
+  <p [ngStyle]="{'color': color, 'font-size.px': size}" class="text-gray-600">No data available.</p>
   }
 
   <button (click)="clearData()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
