--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,8 @@
   <p [ngStyle]="{'color': color, 'font-size.px': size}" class="text-gray-600">No data available.</p>
   }
 
-  <button (click)="clearData()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+  <button [ngStyle]="{'font-weight':isActive ? 'bold' : 'normal'}" (click)="clearData()"
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
     Clear Data
   </button>
 
