--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div [ngClass]="isActive ? 'dark' : 'light'" class="flex flex-col items-center justify-center min-h-screen">
-  <h1 [ngStyle]="{'background': 'red', 'color':'white'}" class="text-3xl font-bold">
+  <h1 class="text-3xl font-bold text-purple-700 mb-6 mt-4">
     User Data Management
   </h1>
 
