--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,30 +1,21 @@
-<div [ngClass]="isActive ? 'dark' : 'light'" class="flex flex-col items-center justify-center min-h-screen">
-  <h1 class="text-3xl font-bold text-purple-700 mb-6 mt-4">
-    User Data Management
-  </h1>
+<div class="flex flex-col items-center justify-center min-h-screen">
+  <h1 class="text-4xl font-bold text-yellow-500">User Management</h1>
+  <h2 class="text-2xl text-red-400">Name : {{fname()}}</h2>
+  <h2 class="text-2xl text-purple-400">LastName : {{lname()}}</h2>
+  <h3 class="text-2xl text-green-400">Experience : {{exp()}} years</h3>
+  <h3 class="text-2xl text-blue-400">Skills : {{skills()}} </h3>
+  <ul>
+    @for (item of skills(); track item) {
+    <li class="text-lg text-gray-700">{{item}}</li>
+    }
+  </ul>
+  <hr>
 
-  @for(user of data; track user.id) {
-  <div class="bg-white shadow-md rounded-lg p-6 mb-4 w-full max-w-md">
-    <h2 class="text-xl font-semibold mb-2">User:
-      <span class="text-pink-600">{{ user.name | uppercase }}</span>
-    </h2>
-    <p class="text-gray-600">Salary: {{ user.salary | currency: "฿" }}</p>
-    <p class="text-green-600">Last Active: {{ user.active | date: 'fullDate' | uppercase }}</p>
-  </div>
-  }@empty {
-  <p [ngStyle]="{'color': color, 'font-size.px': size}" class="text-gray-600">No data available.</p>
-  }
-
-  <button [ngStyle]="{'font-weight':isActive ? 'bold' : 'normal'}" (click)="clearData()"
-    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-    Clear Data
+  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" (click)="change()">Switch
   </button>
 
-  <button (click)="addData()" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mt-3">
-    Add User
-  </button>
+  <button (click)="increment()"
+    class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">+</button>
+  <button (click)="decrement()" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">-</button>
 
-  <button (click)="changeMode()" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mt-3">
-    {{ isActive ? 'Switch to Light Mode' : 'Switch to Dark Mode' }}
-  </button>
 </div>
