--- a/src/app/item/item.html
+++ b/src/app/item/item.html
@@ -1,4 +1,6 @@
-<p class="text-2xl">ID : {{id()}}</p>
-<p class="text-2xl">Name : {{name()}}</p>
-<p class="text-2xl">Salary : {{salary()}}</p>
+<h2>ID : {{id()}}</h2>
+<h2>Name : {{name()}}</h2>
+<h2>Salary : {{salary()}}</h2>
+
+<button (click)="deleteItem()" class="bg-red-500 px-4 py-2 rounded-3xl">Delete</button>
 <hr>
