Full complete Angular20 by Kong Ruksiam Youtube

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <app-header title="My App"></app-header>
+<app-addform (onSave)="insertData($event)"></app-addform>
 
 @for (emp of data; track emp.id) {
 <app-item [id]="emp.id" [name]="emp.name" [salary]="emp.salary" (onDelete)="removeDataById($event)"></app-item>
